--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Graham Roten Enterprises | Professional Business Solutions in Boone, NC</title>
+  <title>Graham Roten Enterprises | Reliable Hauling & Materials Delivery in Boone, NC</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -29,12 +29,12 @@
   <section id="home" class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h2>Professional Business Solutions</h2>
-      <p class="hero-subtitle">Driving growth and building community in Boone, North Carolina</p>
-      <p class="hero-quote">"At Graham Roten Enterprises, we focus on delivering results that matter to your business and community."</p>
+      <h2>Reliable Trucking & Materials Delivery</h2>
+      <p class="hero-subtitle">Professional hauling services and quality materials for Boone, North Carolina</p>
+      <p class="hero-quote">"At Graham Roten Enterprises, we're committed to delivering your materials safely, on time, every time."</p>
       <div class="hero-buttons">
         <a href="#services" class="btn btn-primary">Our Services</a>
-        <a href="#contact" class="btn btn-secondary">Contact Us</a>
+        <a href="#contact" class="btn btn-secondary">Get Quote</a>
       </div>
     </div>
   </section>
@@ -43,20 +43,20 @@
     <div class="container">
       <div class="stats-grid">
         <div class="stat-item">
-          <div class="stat-number">15+</div>
+          <div class="stat-number">10+</div>
           <div class="stat-label">Years Experience</div>
         </div>
         <div class="stat-item">
-          <div class="stat-number">100+</div>
-          <div class="stat-label">Successful Projects</div>
+          <div class="stat-number">500+</div>
+          <div class="stat-label">Loads Delivered</div>
         </div>
         <div class="stat-item">
-          <div class="stat-number">50+</div>
-          <div class="stat-label">Satisfied Clients</div>
+          <div class="stat-number">100+</div>
+          <div class="stat-label">Happy Customers</div>
         </div>
         <div class="stat-item">
           <div class="stat-number">24/7</div>
-          <div class="stat-label">Support Available</div>
+          <div class="stat-label">Emergency Service</div>
         </div>
       </div>
     </div>
@@ -66,50 +66,107 @@
     <div class="container">
       <div class="section-header">
         <h2>Our Services</h2>
-        <p>Comprehensive business solutions tailored to your needs</p>
+        <p>Professional trucking and materials delivery throughout the High Country</p>
       </div>
       <div class="services-grid">
         <div class="service-card">
           <div class="service-icon">
-            <i class="fas fa-chart-line"></i>
+            <i class="fas fa-truck"></i>
           </div>
-          <h3>Business Consulting</h3>
-          <p>Strategic planning and advisory services to help your business reach its full potential.</p>
+          <h3>Heavy Hauling</h3>
+          <p>Professional transportation of construction equipment, machinery, and oversized loads throughout the region.</p>
         </div>
         <div class="service-card">
           <div class="service-icon">
-            <i class="fas fa-building"></i>
+            <i class="fas fa-mountain"></i>
           </div>
-          <h3>Real Estate Development</h3>
-          <p>Comprehensive real estate development services from planning to completion.</p>
+          <h3>Gravel & Stone Delivery</h3>
+          <p>Quality aggregates including gravel, crushed stone, sand, and fill dirt delivered to your job site.</p>
         </div>
         <div class="service-card">
           <div class="service-icon">
-            <i class="fas fa-users"></i>
+            <i class="fas fa-hammer"></i>
           </div>
-          <h3>Community Engagement</h3>
-          <p>Building stronger communities through strategic partnerships and local initiatives.</p>
+          <h3>Construction Support</h3>
+          <p>Reliable hauling services for construction projects, from residential driveways to commercial developments.</p>
         </div>
         <div class="service-card">
           <div class="service-icon">
-            <i class="fas fa-handshake"></i>
+            <i class="fas fa-home"></i>
           </div>
-          <h3>Project Management</h3>
-          <p>Expert project management services ensuring timely and successful project completion.</p>
+          <h3>Residential Services</h3>
+          <p>Driveway materials, landscaping stone, and residential construction material delivery.</p>
         </div>
         <div class="service-card">
           <div class="service-icon">
-            <i class="fas fa-cogs"></i>
+            <i class="fas fa-tools"></i>
           </div>
-          <h3>Operational Excellence</h3>
-          <p>Streamlining operations and improving efficiency across all business functions.</p>
+          <h3>Equipment Transport</h3>
+          <p>Safe and secure transportation of heavy equipment, excavators, and construction machinery.</p>
         </div>
         <div class="service-card">
           <div class="service-icon">
-            <i class="fas fa-lightbulb"></i>
+            <i class="fas fa-clock"></i>
           </div>
-          <h3>Strategic Planning</h3>
-          <p>Long-term strategic planning to position your business for sustainable growth.</p>
+          <h3>Emergency Services</h3>
+          <p>24/7 emergency hauling services for urgent construction needs and material delivery.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="equipment-section">
+    <div class="container">
+      <div class="section-header">
+        <h2>Our Fleet & Equipment</h2>
+        <p>Professional trucks and equipment ready to handle your toughest jobs</p>
+      </div>
+      <div class="equipment-grid">
+        <div class="equipment-item">
+          <img src="images/336902160_789623425930230_1619791549834191327_n.jpg" alt="Heavy equipment transport trucks" />
+          <div class="equipment-overlay">
+            <h3>Heavy Equipment Transport</h3>
+            <p>Specialized trailers for safe equipment hauling</p>
+          </div>
+        </div>
+        <div class="equipment-item">
+          <img src="images/470574892_1059230006216648_6009924195533769907_n.jpg" alt="Dump truck delivering materials" />
+          <div class="equipment-overlay">
+            <h3>Material Delivery</h3>
+            <p>Professional dump trucks for all aggregates</p>
+          </div>
+        </div>
+        <div class="equipment-item">
+          <img src="images/470173373_1058480426291606_251035608076363021_n.jpg" alt="Graham Roten Enterprises fleet" />
+          <div class="equipment-overlay">
+            <h3>Professional Fleet</h3>
+            <p>Well-maintained trucks with experienced drivers</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="projects-section">
+    <div class="container">
+      <div class="section-header">
+        <h2>Recent Projects</h2>
+        <p>Quality workmanship in every delivery and installation</p>
+      </div>
+      <div class="projects-grid">
+        <div class="project-item">
+          <img src="images/474369773_1083477833791865_56422082761328271_n.jpg" alt="Gravel driveway installation" />
+          <div class="project-overlay">
+            <h3>Residential Driveway</h3>
+            <p>Quality gravel installation with proper drainage</p>
+          </div>
+        </div>
+        <div class="project-item">
+          <img src="images/482020987_1141159528021971_835106292052869519_n.jpg" alt="Stone retaining wall project" />
+          <div class="project-overlay">
+            <h3>Retaining Wall Materials</h3>
+            <p>Premium stone delivery for landscaping projects</p>
+          </div>
         </div>
       </div>
     </div>
@@ -120,26 +177,26 @@
       <div class="about-content">
         <div class="about-text">
           <h2>About Graham Roten Enterprises</h2>
-          <p class="lead">With over 15 years of experience in business consulting and community development, Graham Roten Enterprises has established itself as a trusted partner for businesses and organizations throughout Boone, North Carolina.</p>
-          <p>We specialize in delivering comprehensive business solutions that drive growth, improve operations, and strengthen community connections. Our team brings deep expertise across multiple industries, ensuring that we can provide tailored solutions that meet your unique challenges and opportunities.</p>
-          <p>Our commitment to excellence and customer satisfaction has made us the preferred choice for businesses looking to achieve sustainable growth and make a positive impact in their communities.</p>
+          <p class="lead">With over a decade of experience in the trucking and materials industry, Graham Roten Enterprises has established itself as the trusted hauling partner for contractors, builders, and homeowners throughout Boone and the High Country region.</p>
+          <p>We specialize in reliable transportation of construction materials, heavy equipment, and quality aggregates. As an expanding enterprise, we combine our core trucking expertise with comprehensive project support services. Our modern fleet and experienced team ensure your materials arrive safely and on schedule.</p>
+          <p>From small residential projects to large commercial developments, Graham Roten Enterprises is your trusted partner for trucking, materials delivery, and project logistics throughout the High Country.</p>
           <div class="about-features">
             <div class="feature">
               <i class="fas fa-check-circle"></i>
-              <span>Proven track record of success</span>
+              <span>Licensed and insured operations</span>
             </div>
             <div class="feature">
               <i class="fas fa-check-circle"></i>
-              <span>Local expertise and community focus</span>
+              <span>Local knowledge of mountain roads</span>
             </div>
             <div class="feature">
               <i class="fas fa-check-circle"></i>
-              <span>Comprehensive business solutions</span>
+              <span>Modern, well-maintained fleet</span>
             </div>
           </div>
         </div>
         <div class="about-image">
-          <img src="https://images.unsplash.com/photo-1560472354-b33ff0c44a43?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="Business meeting" />
+          <img src="images/470574892_1059230006216648_6009924195533769907_n.jpg" alt="Graham Roten Enterprises dump truck on mountain construction site" />
         </div>
       </div>
     </div>
@@ -207,7 +264,7 @@
       <div class="footer-content">
         <div class="footer-info">
           <h3>Graham Roten Enterprises</h3>
-          <p>Professional business solutions in Boone, NC</p>
+          <p>Reliable trucking and materials delivery in Boone, NC</p>
         </div>
         <div class="footer-links">
           <h4>Quick Links</h4>
