Added logo and modified layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <header class="navbar">
     <div class="container">
       <div class="logo">
-        <h1>Graham Roten Enterprises</h1>
+        <img src="images/logo.png" alt="Graham Roten Enterprises Logo" />
+        <span class="company-name">Graham Roten Enterprises</span>
       </div>
       <nav id="nav">
         <a href="#home">Home</a>
@@ -263,7 +264,10 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-info">
-          <h3>Graham Roten Enterprises</h3>
+          <div class="footer-logo">
+            <img src="images/logo.png" alt="Graham Roten Enterprises Logo" />
+            <h3>Graham Roten Enterprises</h3>
+          </div>
           <p>Reliable trucking and materials delivery in Boone, NC</p>
         </div>
         <div class="footer-links">
