Changed the tag line

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <section id="home" class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h2>Reliable Trucking & Materials Delivery</h2>
-      <p class="hero-subtitle">Professional hauling services and quality materials for Boone, North Carolina</p>
+      <h2>Construction Services & Materials Delivery</h2>
+      <p class="hero-subtitle">Comprehensive site services, hauling, and quality materials for Boone, North Carolina</p>
       <p class="hero-quote">"At Graham Roten Enterprises, we're committed to delivering your materials safely, on time, every time."</p>
       <div class="hero-buttons">
         <a href="#services" class="btn btn-primary">Our Services</a>
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="section-header">
         <h2>Our Services</h2>
-        <p>Professional trucking and materials delivery throughout the High Country</p>
+        <p>Comprehensive construction services and materials delivery throughout the High Country</p>
       </div>
       <div class="services-grid">
         <div class="service-card">
@@ -88,8 +88,8 @@
           <div class="service-icon">
             <i class="fas fa-hammer"></i>
           </div>
-          <h3>Construction Support</h3>
-          <p>Reliable hauling services for construction projects, from residential driveways to commercial developments.</p>
+          <h3>Site Preparation</h3>
+          <p>Complete site preparation services including excavation, grading, and foundation preparation for construction projects.</p>
         </div>
         <div class="service-card">
           <div class="service-icon">
@@ -107,10 +107,10 @@
         </div>
         <div class="service-card">
           <div class="service-icon">
-            <i class="fas fa-clock"></i>
+            <i class="fas fa-wrench"></i>
           </div>
-          <h3>Emergency Services</h3>
-          <p>24/7 emergency hauling services for urgent construction needs and material delivery.</p>
+          <h3>Septic Services</h3>
+          <p>Professional septic system installation, maintenance, and repair services for residential and commercial properties.</p>
         </div>
       </div>
     </div>
