--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
           <h3>Septic Services</h3>
           <p>Professional septic system installation, maintenance, and repair services for residential and commercial properties.</p>
         </div>
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fas fa-fire"></i>
+          </div>
+          <h3>Welding & Fabrication</h3>
+          <p>Custom metal fabrication and welding services for equipment repairs and specialized construction needs.</p>
+        </div>
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fas fa-cog"></i>
+          </div>
+          <h3>Equipment Services</h3>
+          <p>Mobile repair and maintenance services for construction equipment and fleet vehicles.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -140,10 +154,31 @@
           </div>
         </div>
         <div class="equipment-item">
+          <img src="images/475266490_1106794861458438_8365482621217934152_n.jpg" alt="Large capacity dump truck" />
+          <div class="equipment-overlay">
+            <h3>Large Capacity Hauling</h3>
+            <p>High-volume material transport for major projects</p>
+          </div>
+        </div>
+        <div class="equipment-item">
+          <img src="images/482056673_1141158568022067_6360673706066929070_n.jpg" alt="Excavator and skid steer equipment" />
+          <div class="equipment-overlay">
+            <h3>Excavation Equipment</h3>
+            <p>Modern excavators and skid steers for all site work</p>
+          </div>
+        </div>
+        <div class="equipment-item">
+          <img src="images/151144100_101655945307397_2078798228630918879_n.jpg" alt="Service truck for repairs and maintenance" />
+          <div class="equipment-overlay">
+            <h3>Service & Maintenance</h3>
+            <p>Mobile service units for equipment repairs and maintenance</p>
+          </div>
+        </div>
+        <div class="equipment-item">
           <img src="images/470173373_1058480426291606_251035608076363021_n.jpg" alt="Graham Roten Enterprises fleet" />
           <div class="equipment-overlay">
             <h3>Professional Fleet</h3>
-            <p>Well-maintained trucks with experienced drivers</p>
+            <p>Well-maintained trucks with experienced operators</p>
           </div>
         </div>
       </div>
@@ -165,10 +200,38 @@
           </div>
         </div>
         <div class="project-item">
-          <img src="images/482020987_1141159528021971_835106292052869519_n.jpg" alt="Stone retaining wall project" />
+          <img src="images/195928989_163029632503361_6248319710734467780_n.jpg" alt="Road construction and grading" />
           <div class="project-overlay">
-            <h3>Retaining Wall Materials</h3>
-            <p>Premium stone delivery for landscaping projects</p>
+            <h3>Road Construction</h3>
+            <p>Professional road building and site preparation</p>
+          </div>
+        </div>
+        <div class="project-item">
+          <img src="images/482005197_1141159594688631_8684565407116370089_n.jpg" alt="Stone retaining wall construction" />
+          <div class="project-overlay">
+            <h3>Retaining Wall Construction</h3>
+            <p>Custom stone walls and erosion control solutions</p>
+          </div>
+        </div>
+        <div class="project-item">
+          <img src="images/482030459_1141159588021965_7261154796143184377_n.jpg" alt="Residential excavation project" />
+          <div class="project-overlay">
+            <h3>Site Excavation</h3>
+            <p>Precision excavation for residential foundations</p>
+          </div>
+        </div>
+        <div class="project-item">
+          <img src="images/470180707_1058474762958839_3878693785420791625_n.jpg" alt="Gravel pathway installation" />
+          <div class="project-overlay">
+            <h3>Pathway & Access Roads</h3>
+            <p>Custom gravel paths and access road construction</p>
+          </div>
+        </div>
+        <div class="project-item">
+          <img src="images/482135983_1141159801355277_5324343361872030867_n.jpg" alt="Commercial excavation work" />
+          <div class="project-overlay">
+            <h3>Commercial Excavation</h3>
+            <p>Large-scale excavation for commercial developments</p>
           </div>
         </div>
       </div>
