Changed Labels of Recent Projects

--- a/index.html
+++ b/index.html
@@ -201,48 +201,48 @@
         <p>Quality workmanship in every delivery and installation</p>
       </div>
       <div class="projects-grid">
-        <div class="project-item">
-          <img src="images/474369773_1083477833791865_56422082761328271_n.jpg" alt="Gravel driveway installation" />
+        <a href="heavy-hauling.html" class="project-item">
+          <img src="images/470180707_1058474762958839_3878693785420791625_n.jpg" alt="Material hauling and delivery" />
           <div class="project-overlay">
-            <h3>Residential Driveway</h3>
-            <p>Quality gravel installation with proper drainage</p>
+            <h3>Hauling</h3>
+            <p>Professional material delivery and heavy equipment transport</p>
           </div>
-        </div>
-        <div class="project-item">
-          <img src="images/195928989_163029632503361_6248319710734467780_n.jpg" alt="Road construction and grading" />
+        </a>
+        <a href="grading.html" class="project-item">
+          <img src="images/195928989_163029632503361_6248319710734467780_n.jpg" alt="Road grading and preparation" />
           <div class="project-overlay">
-            <h3>Road Construction</h3>
-            <p>Professional road building and site preparation</p>
+            <h3>Grading</h3>
+            <p>Road construction and site preparation grading services</p>
           </div>
-        </div>
-        <div class="project-item">
-          <img src="images/482005197_1141159594688631_8684565407116370089_n.jpg" alt="Stone retaining wall construction" />
+        </a>
+        <a href="excavating.html" class="project-item">
+          <img src="images/482030459_1141159588021965_7261154796143184377_n.jpg" alt="Excavation project" />
           <div class="project-overlay">
-            <h3>Retaining Wall Construction</h3>
-            <p>Custom stone walls and erosion control solutions</p>
+            <h3>Excavating</h3>
+            <p>Precision excavation for foundations and site development</p>
           </div>
-        </div>
-        <div class="project-item">
-          <img src="images/482030459_1141159588021965_7261154796143184377_n.jpg" alt="Residential excavation project" />
+        </a>
+        <a href="land-clearing.html" class="project-item">
+          <img src="images/482135983_1141159801355277_5324343361872030867_n.jpg" alt="Land clearing operations" />
           <div class="project-overlay">
-            <h3>Site Excavation</h3>
-            <p>Precision excavation for residential foundations</p>
+            <h3>Land Clearing</h3>
+            <p>Professional land clearing and site preparation services</p>
           </div>
-        </div>
-        <div class="project-item">
-          <img src="images/470180707_1058474762958839_3878693785420791625_n.jpg" alt="Gravel pathway installation" />
+        </a>
+        <a href="commercial-site-work.html" class="project-item">
+          <img src="images/482135983_1141159801355277_5324343361872030867_n.jpg" alt="Commercial site work" />
           <div class="project-overlay">
-            <h3>Pathway & Access Roads</h3>
-            <p>Custom gravel paths and access road construction</p>
+            <h3>Commercial Site Work</h3>
+            <p>Large-scale commercial site development and preparation</p>
           </div>
-        </div>
-        <div class="project-item">
-          <img src="images/482135983_1141159801355277_5324343361872030867_n.jpg" alt="Commercial excavation work" />
+        </a>
+        <a href="residential.html" class="project-item">
+          <img src="images/474369773_1083477833791865_56422082761328271_n.jpg" alt="Residential site work" />
           <div class="project-overlay">
-            <h3>Commercial Excavation</h3>
-            <p>Large-scale excavation for commercial developments</p>
+            <h3>Residential Site Work</h3>
+            <p>Driveway installation and residential site preparation</p>
           </div>
-        </div>
+        </a>
       </div>
     </div>
   </section>
