--- a/welding.html
+++ b/welding.html
@@ -114,7 +114,13 @@
             <img src="images/logo.png" alt="Graham Roten Enterprises Logo" />
             <h3>Graham Roten Enterprises</h3>
           </div>
-          <p>Reliable trucking and materials delivery in Boone, NC</p>
+          <div class="footer-licensing">
+            <p><em>NC Building Contractor, Highway Contractor, Public Utility Contractor</em></p>
+            <p><em>Unclassified and Unlimited General Contractor – License # 85284</em></p>
+            <p><em>NC Level IV Wastewater System Installer – Certification # 6897</em></p>
+            <p><em>NC Onsite Wastewater Point of Sale Inspector – Certification # 6897I</em></p>
+            <p><em>USDOT # 3395431 | MC # 01093913</em></p>
+          </div>
         </div>
         <div class="footer-links">
           <h4>Quick Links</h4>
