--- a/commercial-site-work.html
+++ b/commercial-site-work.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Commercial Site Work | Graham Roten Enterprises</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="images/logo.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/logo.png">
-  <link rel="apple-touch-icon" href="images/logo.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/Logo-transparent.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/Logo-transparent.png">
+  <link rel="apple-touch-icon" href="images/Logo-transparent.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -14,7 +14,7 @@
   <header class="navbar">
     <div class="container">
       <div class="logo">
-        <img src="images/logo.png" alt="Graham Roten Enterprises Logo" />
+        <img src="images/Logo-transparent.png" alt="Graham Roten Enterprises Logo" />
         <span class="company-name">Graham Roten Enterprises</span>
       </div>
       <nav id="nav">
@@ -118,7 +118,7 @@
       <div class="footer-content">
         <div class="footer-info">
           <div class="footer-logo">
-            <img src="images/logo.png" alt="Graham Roten Enterprises Logo" />
+            <img src="images/Logo-transparent.png" alt="Graham Roten Enterprises Logo" />
             <h3>Graham Roten Enterprises</h3>
           </div>
           <div class="footer-licensing">
